@@ -1,3 +1,5 @@
+  - Add a site-specific extractor for www.bbc.com
+
 v0.38.0 2020-08-14T21:01:48+0800
   - Improve the accuracy of extraction of journalist and dateline on news.pts.gov.tw
   - Improve the recall of the extractor of news.tnn.tw
